--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 group "io.kestra.plugin"
-description 'MongoDb Plugin for Kestra'
+description 'MongoDB Plugin for Kestra'
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -106,7 +106,8 @@ nexusPublishing {
 jar {
     manifest {
         attributes(
-                "X-Kestra-Title": project.name,
+                "X-Kestra-Name": project.name,
+                "X-Kestra-Title": "MongoDB",
                 "X-Kestra-Group": project.group + ".mongodb",
                 "X-Kestra-Description": project.description,
                 "X-Kestra-Version": project.version
