--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,11 @@ repositories {
     }
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 group "io.kestra.plugin"
-description 'MongoDB Plugin for Kestra'
+description 'Access and manipulate MongoDB data within Kestra workflows.'
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
