--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ repositories {
     }
 }
 
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = 21
+targetCompatibility = 21
 
 group "io.kestra.plugin"
 description 'Access and manipulate MongoDB data within Kestra workflows.'
@@ -33,22 +33,16 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    // lombok
+    // Lombok
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     compileOnly "org.projectlombok:lombok:$lombokVersion"
 
-    // micronaut
-    annotationProcessor platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
-    annotationProcessor "io.micronaut:micronaut-inject-java"
-    annotationProcessor "io.micronaut.validation:micronaut-validation-processor"
-
+    // Micronaut
     compileOnly platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
-    compileOnly "io.micronaut:micronaut-inject"
-    compileOnly "io.micronaut.validation:micronaut-validation"
-    compileOnly "io.micronaut:micronaut-jackson-databind"
     compileOnly "io.micronaut.reactor:micronaut-reactor"
 
-    // kestra
+    // Kestra
+    annotationProcessor group: "io.kestra", name: "processor", version: kestraVersion
     compileOnly group: "io.kestra", name: "core", version: kestraVersion
 
     api 'org.mongodb:mongodb-driver-sync:5.0.1'
@@ -85,6 +79,7 @@ dependencies {
     testImplementation "io.micronaut.test:micronaut-test-junit5"
 
     // kestra
+    testAnnotationProcessor group: "io.kestra", name: "processor", version: kestraVersion
     testImplementation group: "io.kestra", name: "core", version: kestraVersion
     testImplementation group: "io.kestra", name: "storage-local", version: kestraVersion
 
