--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Build the docker-compose stack
         if: ${{ github.event.inputs.skip-test == 'false' || github.event.inputs.skip-test == '' }}
         run: |
-          docker-compose -f docker-compose-ci.yml up -d
+          docker compose -f docker-compose-ci.yml up -d
           sleep 10
           curl -s -o .github/workflows/mongo_data.jsonl https://raw.githubusercontent.com/ozlerhakan/mongodb-json-files/master/datasets/books.json
-          docker exec plugin-mongodb_mongo_1 sh -c "mongoimport --authenticationDatabase admin -c books  "mongodb://root:example@localhost/samples" /tmp/docker/mongo_data.jsonl > /dev/null"
+          docker compose -f docker-compose-ci.yml exec mongo sh -c "mongoimport --authenticationDatabase admin -c books  "mongodb://root:example@localhost/samples" /tmp/docker/mongo_data.jsonl > /dev/null"
 
       # Caches
       - name: Gradle cache
