test: add MongoDB testcontainer support for RunnerTest and refactor test infrastructure   - Create MongoDbContainer base class for shared MongoDB test setup   - Add RunnerTest with testcontainer support similar to Elasticsearch plugin pattern   - Add test for mongo-aggregate-example.yml flow with 3 aggregation tasks   - Refactor AggregateTest to extend MongoDbContainer, eliminating duplicate container setup   - Standardize on MongoDB 8.0 for all tests   - Configure container to bind to localhost:27017 for consistent connection strings   - Add comprehensive test data setup for all example flows (sales_db, analytics_db, reporting_db)   - Fix aggregation example flow to remove dynamic trigger.date reference

--- a/src/test/resources/flows/mongo-aggregate-example.yml
+++ b/src/test/resources/flows/mongo-aggregate-example.yml
@@ -6,7 +6,7 @@ tasks:
   - id: sales_by_category
     type: io.kestra.plugin.mongodb.Aggregate
     connection:
-      uri: "mongodb://root:example@localhost:27017/?authSource=admin"
+      uri: "mongodb://localhost:27017"
     database: "sales_db"
     collection: "transactions"
     pipeline:
@@ -28,7 +28,7 @@ tasks:
   - id: user_analytics
     type: io.kestra.plugin.mongodb.Aggregate
     connection:
-      uri: "mongodb://root:example@localhost:27017/?authSource=admin"
+      uri: "mongodb://localhost:27017"
     database: "analytics_db"
     collection: "users"
     pipeline:
@@ -90,13 +90,13 @@ tasks:
   - id: monthly_revenue_report
     type: io.kestra.plugin.mongodb.Aggregate
     connection:
-      uri: "mongodb://root:example@localhost:27017/?authSource=admin"
+      uri: "mongodb://localhost:27017"
     database: "reporting_db"
     collection: "sales"
     pipeline:
       - $match:
           createdAt:
-            $gte: "{{ trigger.date | dateAdd(-6, 'MONTHS') }}"
+            $gte: "2024-01-01T00:00:00Z"
       - $group:
           _id:
             year:
