test: add missing @BeforeEach test data setup to fix failing MongoDB tests - Refactor other test classes to extend MongoDbContainer for consistent connection URI and use of testContainer - Ensure each test class manages its own test data independently

--- a/src/test/resources/flows/mongo-aggregate-example.yml
+++ b/src/test/resources/flows/mongo-aggregate-example.yml
@@ -84,7 +84,7 @@ tasks:
             $gt: 0
     allowDiskUse: true
     maxTimeMs: 30000
-    store: true
+    store: STORE
 
   # Time-based aggregation for reporting
   - id: monthly_revenue_report
