--- a/src/test/resources/flows/mongo-listen.yml
+++ b/src/test/resources/flows/mongo-listen.yml
@@ -5,7 +5,7 @@ triggers:
   - id: watch
     type: io.kestra.plugin.mongodb.Trigger
     connection:
-      uri: mongodb://root:example@localhost:27017/?authSource=admin
+      uri: mongodb://localhost:27017
     database: samples
     collection: books
     filter:
