--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,11 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-engine"
     testImplementation "org.hamcrest:hamcrest"
     testImplementation "org.hamcrest:hamcrest-library"
+    
+    // testcontainers
+    testImplementation "org.testcontainers:testcontainers:1.19.3"
+    testImplementation "org.testcontainers:mongodb:1.19.3"
+    testImplementation "org.testcontainers:junit-jupiter:1.19.3"
 }
 
 /**********************************************************************************************************************\
