--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,12 @@ repositories {
     }
 }
 
-sourceCompatibility = 21
-targetCompatibility = 21
+final targetJavaVersion = JavaVersion.VERSION_21
+
+java {
+    sourceCompatibility = targetJavaVersion
+    targetCompatibility = targetJavaVersion
+}
 
 group "io.kestra.plugin"
 description 'Access and manipulate MongoDB data within Kestra workflows.'
