ci: bind secret for plugin release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,5 +29,6 @@ jobs:
           releaseVersion: ${{ github.event.inputs.releaseVersion }}
           nextVersion: ${{ github.event.inputs.nextVersion }}
           dryRun: ${{ github.event.inputs.dryRun }}
+          webhookUrl: ${{ secrets.KESTRA_WEBHOOK_URL_PLUGIN_RELEASE_INDEX }}
         env:
           GITHUB_PAT: ${{ secrets.GH_PERSONAL_TOKEN }}
